Working on search function

--- a/main.css
+++ b/main.css
@@ -1,17 +1,30 @@
 body {
     background-color: aqua;
+    /* background-color: rgb(12, 153, 158) */
 }
 
 .header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly;
     align-items: center;
     font-size: x-large;
     color: rgb(47, 49, 49);
     background-color: aqua;
     border-bottom: double;
-    flex-direction: column;
+    /* flex-direction: column; */
 }
+
+#list-header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+#home-button {
+    min-height: 30px;
+    width: 70px;
+}
+
 
 #page {
     display: flex;
@@ -19,23 +32,18 @@ body {
     align-items: center;
 }
 
+
+#searchbar {
+    width: 20vw;
+    padding-right: 10px;
+}
+
 #fishContainer {
     display: flex;
-    flex-direction: row;
-    width: 1600px;
-}
-
-#leftRow {
-    width: 50%;
-    background-color: white;
-    align-items: center;
-}
-
-
-#rightRow {
-    width: 50%;
-    background-color: white;
-    align-items: center;
+    flex-wrap: wrap;
+    width: 90vw;
+    margin: auto;
+    justify-content: center;
 }
 
 .fish-card {
@@ -44,9 +52,11 @@ body {
     justify-content: space-evenly;
     border-style: inset;
     min-height: 220px;
+    min-width: 200px;
     align-items: center;
     text-align: center;
     flex-direction: column;
+    background-color: cadetblue;
 }
 
 .fish-card img {
@@ -62,10 +72,19 @@ body {
     padding: 15px;
 }
 
-#userlist-div {
+.userlist-div {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60vw;
+    margin: auto;
+    justify-content: center;
     text-align: center;
-    background-color: antiquewhite;
 }
+
+#view-list {
+    min-height: 30px;
+}
+
 
 
 
